fix: additional css to force wrap text

--- a/sites/public/styles/overrides.scss
+++ b/sites/public/styles/overrides.scss
@@ -183,6 +183,12 @@
     }
   }
 
+  .seeds-cards-section, .seeds-heading-group {
+    &, > * {
+      overflow-wrap: anywhere;
+    }
+  }
+
   // Used in core for theming testing purposes only
   .lakeview {
     --seeds-color-primary-darker: #4e2169;
